Implemented serving recipe files scanned from a directory. No HTML yet, though.

--- a/sample/site/recipes/fluffy-pancakes.recipe.yml
+++ b/sample/site/recipes/fluffy-pancakes.recipe.yml
@@ -1,5 +1,6 @@
 ---
 name: Fluffy Pancakes
+permalink: fluffy-pancakes
 intro: >-
   This is a derivative of an old recipe originally designed for waffles. The result is something that some pancake
   purists refuse to accept, but most normally people enjoy for their fluffy texture.
